fix: improve jms error handling and reconnections